tests/unsafe/neg/Lazy.hs
{-# LIQUID "--Werror" #-}

module Lazy where

{-@ lazy f @-}
f :: ()
f = ()
